# sopel-amputator

./: NEWS  README.md  pyproject.toml  setup.cfg  setup.py
sopel_amputator/: __init__.py
