[build-system]
requires = ["setuptools>=63.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
platforms = ["Linux x86, x86-64"]

[tool.setuptools.packages.find]
include = ["sopel_amputator", "sopel_amputator.*"]
namespaces = false

[tool.setuptools.dynamic]
readme = { file=["README.md", "NEWS"], content-type="text/markdown" }

[project]
name = "sopel-amputator"
version = "0.2.1"
description = "Sopel plugin that detects AMP links and finds their canonical forms using AmputatorBot"

authors = [
  { name="dgw", email="dgw@technobabbl.es" },
]

license = { text="EFL-2.0" }
dynamic = ["readme"]

classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: Eiffel Forum License (EFL)",
    "License :: OSI Approved :: Eiffel Forum License",
    "Topic :: Communications :: Chat :: Internet Relay Chat",
]
keywords = [
  "sopel",
  "plugin",
  "bot",
  "irc",
]

requires-python = ">=3.8, <4"
dependencies = [
    "sopel>=8.0.0.dev0",
]

[project.urls]
"Homepage" = "https://github.com/dgw/sopel-amputator"
"Bug Tracker" = "https://github.com/dgw/sopel-amputator/issues"

[project.entry-points."sopel.plugins"]
"amputator" = "sopel_amputator"
