[metadata]
name = sopel-amputator
version = 0.1.0
description = Sopel plugin that detects AMP links and finds their canonical forms using AmputatorBot
author = dgw
author_email = dgw@technobabbl.es
url = https://github.com/dgw/sopel-amputator
license = Eiffel Forum License, version 2
classifiers =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: Eiffel Forum License (EFL)
    License :: OSI Approved :: Eiffel Forum License
    Topic :: Communications :: Chat :: Internet Relay Chat

[options]
packages = find:
zip_safe = false
include_package_data = true
install_requires =
    sopel>=8.0.0.dev0,<9

[options.entry_points]
sopel.plugins =
    amputator = sopel_amputator
